<resources>
    <!-- Strings for the app -->
    <string name="app_name">Trivio-app</string>
    <string name="achievements">Achievements</string>
    <string name="app_logo">App Logo</string>
    <string name="achievements_title">Achievements Title</string>
    <string name="achievements_list">Achievements List</string>
    <string name="bottom_navigation_bar">Bottom Navigation Bar</string>
    <string name="welcome_message_for_the_user">Welcome message for the user</string>
    <string name="quiz_me_button">Quiz Me</string>
    <string name="leaderboard_button">Leaderboard</string>
    <string name="past_responses_button">Past Responses</string>
    <string name="achievements_button">Achievements</string>
    <string name="welcome_user">Welcome, User</string>
    <string name="quiz_me">QUIZ ME</string>
    <string name="leaderboard">LEADERBOARD</string>
    <string name="past_responses">PAST RESPONSES</string>
    <string name="leaderboard_title">Leaderboard Title</string>
    <string name="leaderboard_list">Leaderboard List</string>
    <string name="leaderboard_lower">Leaderboard</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="login_button">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_button">Sign up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_link">Forgot password link</string>
    <string name="_1_5">1/5</string>
    <string name="current_question_number">Current question number</string>
    <string name="question">question</string>
    <string name="multiple_choice_question_text">Multiple choice question text</string>
    <string name="option_1">Option 1</string>
    <string name="option_1_button_for_the_question">Option 1 button for the question</string>
    <string name="option_2_button_for_the_question">Option 2 button for the question</string>
    <string name="option_3_button_for_the_question">Option 3 button for the question</string>
    <string name="option_4_button_for_the_question">Option 4 button for the question</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="past_responses_lower">Past Responses</string>
    <string name="title_for_past_responses_screen">Title for Past Responses screen</string>
    <string name="progress_bar_showing_the_completion_status">Progress bar showing the completion status</string>
    <string name="current_progress_percentage">Current progress percentage</string>
    <string name="list_of_past_responses">List of past responses</string>
    <string name="_0">0%</string>
    <string name="customize_your_quiz">Customize Your Quiz</string>
    <string name="title_for_customizing_your_quiz">Title for customizing your quiz</string>
    <string name="number_of_questions">Number of Questions:</string>
    <string name="label_for_number_of_questions">Label for number of questions</string>
    <string name="spinner_for_selecting_number_of_questions">Spinner for selecting number of questions</string>
    <string name="label_for_selecting_the_quiz_topic">Label for selecting the quiz topic</string>
    <string name="choose_topic">Choose Topic:</string>
    <string name="spinner_for_selecting_the_quiz_topic">Spinner for selecting the quiz topic</string>
    <string name="label_for_selecting_question_type">Label for selecting question type</string>
    <string name="switch_for_selecting_between_mcq_or_true_false_question_type">Switch for selecting between MCQ or True/False question type</string>
    <string name="button_to_start_the_quiz">Start the quiz</string>
    <string name="start_quiz">START QUIZ</string>
    <string name="question_type">Question Type:</string>
    <string name="mcq_tf">MCQ / TF</string>
    <string name="scrollable_settings_page_for_configuring_notifications_music_and_sound_effects">Scrollable settings page for configuring notifications, music, and sound effects</string>
    <string name="notification_time">Notification Time</string>
    <string name="label_for_setting_the_notification_time">Label for setting the notification time</string>
    <string name="time_picker_for_selecting_the_notification_time">Time picker for selecting the notification time</string>
    <string name="label_for_enabling_or_disabling_notifications">Label for enabling or disabling notifications</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="label_for_enabling_or_disabling_background_music">Label for enabling or disabling background music</string>
    <string name="switch_to_enable_or_disable_notifications">Switch to enable or disable notifications</string>
    <string name="background_music">Background Music</string>
    <string name="enable_music">Enable Music</string>
    <string name="label_for_enabling_or_disabling_sound_effects">Label for enabling or disabling sound effects</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="switch_to_enable_or_disable_background_music">Switch to enable or disable background music</string>
    <string name="enable_sound_effects">Enable Sound Effects</string>
    <string name="save">Save</string>
    <string name="button_to_save_settings">Save settings</string>
    <string name="switch_to_enable_or_disable_sound_effects">Switch to enable or disable sound effects</string>
    <string name="cancel">Cancel</string>
    <string name="button_to_cancel_settings_changes">Cancel settings changes</string>
    <string name="button_to_log_out_of_the_app">Log out of the app</string>
    <string name="logout">Logout</string>
    <string name="text_of_the_current_question_displayed_to_the_user">Text of the current question displayed to the user</string>
    <string name="trueb">TRUE</string>
    <string name="falseb">FALSE</string>
    <string name="your_score_0">Your Score: 0</string>
    <string name="your_current_score_displayed_here">Your current score displayed here</string>
    <string name="button_to_play_the_game_again">Play the game again</string>
    <string name="play_again">Play Again</string>
    <string name="menu">Menu</string>
    <string name="button_to_navigate_to_the_main_menu">Navigate to the main menu</string>
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="settings">Settings</string>
    <string name="icon_representing_the_achievement">Icon representing the achievement</string>
    <string name="achievement_name">Achievement Name</string>
    <string name="the_name_of_the_achievement">The name of the achievement</string>
    <string name="achievement_description">Achievement Description</string>
    <string name="description_of_the_achievement">Description of the achievement</string>
    <string name="the_current_status_of_the_achievement">The current status of the achievement</string>
    <string name="status">Status</string>
    <string name="display_the_user_s_score">Display the user\'s score</string>
    <string name="score_0">Score: 0</string>
    <string name="display_the_user_s_name">Display the user\'s name</string>
    <string name="user_name">User Name</string>
    <string name="questionPast">Question:</string>
    <string name="display_the_question_text">Display the question text</string>
    <string name="display_the_user_s_answer">Display the user\'s answer</string>
    <string name="display_the_correct_answer">Display the correct answer</string>
    <string name="display_the_timestamp_for_the_response">Display the timestamp for the response</string>
    <string name="date">Date:</string>
    <string name="your_answer">Your Answer:</string>
    <string name="correct_answer">Correct Answer:</string>

    <!-- Spinners -->
    <string-array name="number_of_questions_array">
        <item>Select a number</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
    </string-array>

    <string-array name="topics_array">
        <item>Select a topic</item>
        <item>General Knowledge</item>
        <item>Entertainment: Books</item>
        <item>Entertainment: Film</item>
        <item>Entertainment: Music</item>
        <item>Entertainment: Television</item>
        <item>Entertainment: Video Games</item>
        <item>Entertainment: Board Games</item>
        <item>Science: Computers</item>
        <item>Science: Mathematics</item>
        <item>Mythology</item>
        <item>Sports</item>
        <item>Geography</item>
        <item>History</item>
        <item>Politics</item>
        <item>Art</item>
        <item>Celebrities</item>
        <item>Animals</item>
        <item>Vehicles</item>
    </string-array>
</resources>