<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".MainActivity">

    <!-- Logo Image -->
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="431dp"
        android:layout_height="341dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/app_logo"/>

    <!-- Welcome Message -->
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_user"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="-40dp"
        android:contentDescription="@string/welcome_message_for_the_user" />

    <!-- Quiz Me Button -->
    <Button
        android:id="@+id/btn_quiz_me"
        android:layout_width="331dp"
        android:layout_height="73dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/purple"
        android:text="@string/quiz_me"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintWidth_percent="0.8"
        android:contentDescription="@string/quiz_me_button" />

    <!-- Leaderboard Button -->
    <Button
        android:id="@+id/btn_leaderboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal"
        android:text="@string/leaderboard"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_quiz_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/leaderboard_button" />

    <!-- Past Responses Button -->
    <Button
        android:id="@+id/btn_past"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal"
        android:text="@string/past_responses"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_leaderboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/past_responses_button" />

    <!-- Achievements Button -->
    <Button
        android:id="@+id/btn_achievements"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal"
        android:text="@string/achievements"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_past"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/achievements_button" />

    <!-- Bottom Navigation Bar -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:menu="@menu/menu"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/black"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        android:contentDescription="@string/bottom_navigation_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>
