<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/pink"
    android:layout_marginBottom="8dp">

    <!-- User Name -->
    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:contentDescription="@string/display_the_user_s_name" />

    <!-- User Score -->
    <TextView
        android:id="@+id/tv_user_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_0"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:contentDescription="@string/display_the_user_s_score" />
</LinearLayout>
